# GenomeInsight

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  test_fasta.py  test_fastq.py  variants.json
.github/workflows/: tests.yml
examples/: ecoli.gb  gene.fasta  invalid.fasta  msa.fasta  pairwise.fasta  protein.fasta  sample.fasta  sample.fastq  sample.gff3  sample.vcf
fastqc_report/: sample_fastqc.html
genomeinsight/: __init__.py  cli.py
genomeinsight/analysis/: alignment.py  fastq_stats.py  gc_content.py  kmer.py  local_alignment.py  motif.py  msa.py  n50.py  orf.py  primer.py  protein.py  quality.py  restriction.py  reverse_complement.py  sequence_stats.py  transcription.py  translation.py  vcf.py
genomeinsight/commands/: align.py  fasta.py  fastq.py  fastqc.py  gc.py  genbank.py  gff.py  info.py  kmer.py  localalign.py  motif.py  msa.py  n50.py  orf.py  primer.py  protein.py  quality.py  report.py  restriction.py  reverse.py  stats.py  transcribe.py  translate.py  validate.py  vcf.py
genomeinsight/io/: export.py  fasta.py  fastq.py  genbank.py  gff3.py  validator.py  vcf.py
genomeinsight/pipeline/: config.py  runner.py
genomeinsight/qc/: transcription.py  translation.py
genomeinsight/tools/: fastqc.py
genomeinsight/utils/: input_handler.py
tests/: test_gc.py  test_kmer.py  test_motif.py  test_msa.py  test_orf.py  test_primer.py  test_protein.py  test_reverse.py  test_transcription.py  test_translation.py  test_vcf.py
