[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomeinsight"
version = "0.1.0"
description = "A Python-based command-line toolkit for genomics and metagenomics workflows."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Ankit Raj", email = "simplyankitraj@gmail.com"}
]

license = {text = "MIT"}

dependencies = []

[project.scripts]
genomeinsight = "genomeinsight.cli:main"