[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomeinsight"
version = "0.3.0"
description = "A Python-based command-line toolkit for genomics and bioinformatics."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Ankit Raj", email = "simplyankitraj@gmail.com"}
]

license = {text = "MIT"}

keywords = [
    "bioinformatics",
    "genomics",
    "sequence-analysis",
    "fasta",
    "fastq",
    "genbank",
    "vcf",
    "python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "biopython>=1.85",
]

[project.scripts]
genomeinsight = "genomeinsight.cli:main"